@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US003

class Organization {
}

class Collaborator {
    name
    birthday
    admissionDate
    address
    phoneNumber
    email
    IDDocType
    IDNumber
}

class HRM {
    name
}

class Job {
    name
}

class IDDocType {
    document
}

Organization "1" -- "1" HRM : has >
Organization "1" -- "1..*" Collaborator : has >
Organization "1" -- "1..*" Job : owns >
HRM "1" -- "1" Job : selects  >
Job "1" -- "0..*" Collaborator : assigned to >
HRM "1" -- "0..*" Collaborator : register >
Collaborator "0..*" -- "1" IDDocType : owns >
Collaborator "0..*" -- "1" Job : has >

@enduml
